# opengl-bootstrap

./: CHANGES.md  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/glfw/: CMakeLists.txt  main.cpp
apps/qt5/: CMakeLists.txt
apps/qt5/basic/: CMakeLists.txt  main.cpp  window.cpp  window.h
apps/qt5/widgets/: CMakeLists.txt  main.cpp  window.cpp  window.h
cmake/: shaders.cmake
shaders/: CMakeLists.txt
src/bootstrap/: CMakeLists.txt
src/bootstrap/core/: CMakeLists.txt  common.h  openglrenderer.cpp  openglrenderer.h  utils.cpp  utils.h
src/bootstrap/glfw/: CMakeLists.txt  application.cpp  application.h
src/bootstrap/qt5/: CMakeLists.txt  openglsurface.cpp  openglsurface.h  window.cpp  window.h
